Fix Win64 compile errors https://bugs.webkit.org/show_bug.cgi?id=204471

Reviewed by Brent Fulgham.

Fix warnings being treated as errors.

* bytecode/AccessCase.cpp:
(JSC::AccessCase::requiresIdentifierNameMatch const):
(JSC::AccessCase::requiresInt32PropertyCheck const):
(JSC::AccessCase::needsScratchFPR const):
(JSC::AccessCase::doesCalls const):
(JSC::AccessCase::canReplace const):
* dfg/DFGOSRExit.cpp:
(JSC::DFG::OSRExit::executeOSRExit):
* jit/JITOperations.cpp:
(JSC::profiledAdd):
* jit/Repatch.cpp:
(JSC::appropriateOptimizingGetByFunction):
(JSC::appropriateGetByFunction):
* tools/JSDollarVM.cpp:
(JSC::functionCallWithStackSize):


Canonical link: https://commits.webkit.org/217736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252756 268f45cc-cd09-0410-ab3c-d52691b4dbfc